altered piwik.yml reference to matomo tracking site

--- a/config/piwik.yml
+++ b/config/piwik.yml
@@ -12,7 +12,7 @@
 production:
   piwik:
     id_site: 1
-    url: hellorubygeo.matomo.cloud
+    url: hellorubygeo.matomo.cloud/matomo.php
     use_async: false
     disabled: false
 
